--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "discord-economy-super": "^1.7.4",
     "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
